--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	<link rel="manifest" href="app.manifest" />
 	
-	<title>Ninja - Endless Runner Game</title>
+	<title>Kopius Runner Game</title>
 	
 	
    
